--- a/index_v1.html
+++ b/index_v1.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Author" content="Harrison">
+	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript, Music Database">
+	<meta name="Description" content="13CSI Music Database with 13DIT Project">
   <title>Graeme's Music</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+  
 <body>
   <div class="container">
     <h1>Graeme's Music</h1>
@@ -14,4 +19,5 @@
     </div>
   </div>
 </body>
+  
 </html>
