--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1>Graeme's Music</h1>
     <div class="button-container">
-      <button class="login">Login</button>
+      <button onclick="location.href='login.html'" class="login">Login</button>
       <button class="signup">Sign Up</button>
     </div>
   </div>
