--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html>
   
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Author" content="Harrison">
-	<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript, Music Database">
-	<meta name="Description" content="13CSI Music Database with 13DIT Project">
-  <title>Graeme's Music</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  		<meta name="Author" content="Harrison">
+		<meta name="Keywords" content="HTML, CSS, PHP, SQL, JavaScript, Music Database">
+		<meta name="Description" content="13CSI Music Database with 13DIT Project">
+
+  		<title>Graeme's Music</title>
+
+  		<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
   
 <body>
-  <div class="container">
-    <h1>Graeme's Music</h1>
-    <div class="button-container">
-      <button onclick="location.href='login.html'" class="login">Login</button>
-      <button class="signup">Sign Up</button>
-    </div>
-  </div>
+  	<div class="button-container">
+      	<button onclick="location.href='login.php'" class="login">Login</button>
+      	<button class="signup">Sign Up</button>
+  	</div>
+
+  	<div class="container">
+    	<h1>Graeme Music</h1>
+  	</div>
+
 </body>
-  
+
 </html>
