--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 <body>
   	<div class="button-container">
-      	<button onclick="location.href='login.html'" class="login">Login</button>
+      	<button onclick="location.href='login.php'" class="login">Login</button>
       	<button class="signup">Sign Up</button>
   	</div>
 
