--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   		<title>Graeme's Music</title>
 
-  		<link rel="stylesheet" type="text/css" href="style.css">
+  		<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
   
 <body>
