--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   
 <body>
   	<div class="button-container">
-      	<button onclick="location.href='login.php'" class="login">Login</button>
-      	<button class="signup">Sign Up</button>
+		<button onclick="location.href='login.php'" class="login"><span>Login</span></button>
+		<button onclick="location.href='sign_up.php'" class="signup"><span>Sign Up</span></button>
   	</div>
 
   	<div class="container">
